# Klaus

./: .gitignore  CLAUDE.md  README.md  launch.bat  launch_stepsister.bat  pyproject.toml  requirements.txt  run.py  run_hft.bat  run_hft_demo2.bat  run_stepsister.bat
klaus/: main.py
klaus/adaptive/: __init__.py  algo_selector.py  performance_tracker.py  trade_memory.py
klaus/algorithms/: base.py
klaus/algorithms/geopolitical/: gpr_index.py
klaus/algorithms/hft/: cross_commodity_lead_lag.py  hft_momentum.py  microstructure_reversion.py  order_flow_imbalance.py  spread_scalper_hft.py  tick_scalper.py  volatility_breakout_hft.py
klaus/algorithms/mean_reversion/: bollinger.py  zscore.py
klaus/backtest/: backtester.py  data_loader.py
klaus/config/: algorithms.yaml  instruments.yaml  regimes.yaml  risk.yaml  settings.py
klaus/core/: registry.py  types.py
klaus/data/: feature_store.py  hft_feature_store.py  market_data.py  mt5_client.py
klaus/execution/: executor.py  order_tracker.py
klaus/monitoring/: logger.py  metrics.py
klaus/orchestrator/: engine.py  hft_engine.py  rules_engine.py  scheduler.py
klaus/regime/: hmm_detector.py
klaus/risk/: correlation_filter.py  drawdown_control.py  hft_risk_manager.py  position_sizer.py  risk_manager.py  trailing_stop.py
stepsister/: main.py
stepsister/algorithms/: base.py
stepsister/config/: algorithms.yaml  instruments.yaml  regimes.yaml  risk.yaml  settings.py
stepsister/core/: registry.py
stepsister/monitoring/: logger.py
stepsister/orchestrator/: engine.py  hft_engine.py
(+33 files in other folders)
