[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "klaus"
version = "0.1.0"
description = "AI-Driven Algorithmic Trading Platform"
requires-python = ">=3.12"

[project.scripts]
klaus = "klaus.main:main"

[tool.setuptools.packages.find]
include = ["klaus*"]
